# fizyr-rpc

./: CHANGELOG  CHANGELOG.md  CHANGELOG.old.md  CONTRIBUTING.md  Cargo.toml  LICENSE-BSD  README.md  README.tpl
.github/workflows/: rust.yml
derive/: Cargo.toml
derive-macros/: Cargo.toml
derive-macros/src/: interface.rs  util.rs
derive/src/: error.rs  lib.rs
derive/tests/: derive.rs
doc/: fizyr-rpc.adoc
documentation/: fizyr-rpc.adoc
examples/: tcp-client.rs  tcp-server.rs  unix-seqpacket-client.rs  unix-seqpacket-server.rs  unix-stream-client.rs  unix-stream-server.rs
macros/: Cargo.toml
macros-tests/: Cargo.toml
macros-tests/src/: camera.rs  lib.rs
macros-tests/tests/: camera.rs
macros/src/: client.rs  interface.rs  lib.rs  util.rs
macros/src/interface/: generate.rs  mod.rs  parse.rs
macros/src/interface/generate/: client.rs  format_trait.rs  interface_struct.rs  message_enum.rs  mod.rs  server.rs  services.rs  streams.rs
src/: error.rs  format.rs  introspection.rs  lib.rs  listener.rs  macros.rs  message.rs  peer.rs  peer_handle.rs  request.rs  request_tracker.rs  server.rs  stream_peer.rs  transport.rs
src/macros/: error.rs  mod.rs
src/stream/: body.rs  config.rs  mod.rs  transport.rs
src/stream_peer/: body.rs  mod.rs  server.rs
src/transport/: endian.rs  mod.rs
src/transport/stream/: body.rs  config.rs  mod.rs  transport.rs
src/transport/unix/: body.rs  config.rs  mod.rs  transport.rs
src/unix/: body.rs  config.rs  mod.rs  transport.rs
src/util/: accept.rs  bidi_channel.rs  connect.rs  format.rs  into_transport.rs  mod.rs  select.rs  split.rs
wireshark/: README.md  fizyr-rpc.lua
