[package]
name = "fizyr-rpc"
description = "Native Rust implementation of the Fizyr RPC protocol"
version = "0.6.0"
authors = [
	"Fizyr B.V. <info@fizyr.com>",
	"Maarten de Vries <maarten@de-vri.es>",
]

license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/fizyr/fizyr-rpc"
documentation = "https://docs.rs/fizyr-rpc"
readme = "README.md"

keywords = ["rpc", "shared-memory"]
categories = ["asynchronous", "network-programming"]

rust-version = "1.65"
edition = "2021"

[features]
macros = ["fizyr-rpc-macros"]
tcp = ["tokio/net"]
unix-seqpacket = ["tokio-seqpacket"]
unix-stream = ["tokio/net"]

[dependencies]
byteorder = "1.4.3"
filedesc = { version = "0.6.1" }
tokio = { version = "1.32.0", features = ["rt", "sync"] }
tokio-seqpacket = { version = "0.7.0", optional = true }
fizyr-rpc-macros = { version = "=0.6.0", path = "macros", optional = true }

[dev-dependencies]
assert2 = "0.3.11"
clap = { version = "4.4.4", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros"] }
fizyr-rpc = { path = ".", features = ["unix-seqpacket", "unix-stream", "tcp"] }
memfile = "0.2.1"

[package.metadata.docs.rs]
features = ["macros", "tcp", "unix-stream", "unix-seqpacket"]

[workspace]
members = ["macros", "macros-tests"]
