[package]
name = "fizyr-rpc-derive"
version = "0.1.0"
edition = "2018"

[features]
logging = ["log"]

[dependencies]
fizyr-rpc = { version = "0.4.1", path = ".." }
fizyr-rpc-derive-macros = { version = "0.1.0", path = "../derive-macros" }
log = { version = "0.4.14", optional = true }
serde = "1.0.125"
