[package]
name = "macros-tests"
version = "0.0.0"
edition = "2018"
publish = []

[dependencies]
fizyr-rpc = { path = "..", features = ["macros"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
assert2 = "0.3.11"
fizyr-rpc = { path = "..", features = ["unix-stream"] }
tokio = { version = "1.32.0", features = ["macros", "net", "rt"] }
