[package]
name = "fizyr-rpc-macros"
description = "procedural macros for the fizyr-rpc crate"
version = "0.5.0-alpha9"
authors = [
	"Fizyr B.V. <info@fizyr.com>",
	"Maarten de Vries <maarten@de-vri.es>",
]

license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/fizyr/fizyr-rpc"

edition = "2021"

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0.72", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
proc-macro2 = "1.0.26"
quote = "1.0.9"
