[package]
name = "fizyr-rpc-macros"
description = "procedural macros for the fizyr-rpc crate"
version = "0.8.0"
authors = [
	"Fizyr B.V. <info@fizyr.com>",
	"Maarten de Vries <maarten@de-vri.es>",
]

license = "BSD-2-Clause OR Apache-2.0"
repository = "https://github.com/fizyr/fizyr-rpc"
publish = ["crates-io"]

edition = "2021"

[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0.37", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
proc-macro2 = "1.0.67"
quote = "1.0.33"
